--- a/HtmlFiles/dash.html
+++ b/HtmlFiles/dash.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="team.css">
+    <link rel="stylesheet" href="../CssFile/dash.css">
 </head>
 
 <body>
     <div id="main">
         <div id="left">
             <p>ADMIN <br>SURAJ KUMAR</p>
-            <a href="./dash.html" ><i class="fa-solid fa-list"></i> Dashboard</a>
+            <a href="./dash.html" id="dash"><i class="fa-solid fa-list"></i> Dashboard</a>
             <a href="./insert.html"><i class="fa-solid fa-table-list"></i> Insert</a>
-            <a href="./table.html" ><i class="fa-solid fa-chart-line"></i> Table</a>
-            <a href="./index.html" ><i class="fa-solid fa-credit-card"></i> Card</a>
-            <a href="./team.html" id="team"><i class="fa-solid fa-users"></i> Team</a>
+            <a href="./table.html"><i class="fa-solid fa-chart-line"></i> Table</a>
+            <a href="../index.html" ><i class="fa-solid fa-credit-card"></i> Card</a>
+            <a href="./team.html"><i class="fa-solid fa-users"></i> Team</a>
             <div id="premium">
 
             </div>
@@ -49,7 +49,7 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
