--- a/HtmlFiles/table.html
+++ b/HtmlFiles/table.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="table.css">
+    <link rel="stylesheet" href="../CssFile/table.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
             <a href="./dash.html"><i class="fa-solid fa-list"></i> Dashboard</a>
             <a href="./insert.html"><i class="fa-solid fa-table-list"></i> Insert</a>
             <a href="./table.html" id="table"><i class="fa-solid fa-chart-line"></i> Table</a>
-            <a href="./index.html"><i class="fa-solid fa-credit-card"></i> Card</a>
+            <a href="insert.html"><i class="fa-solid fa-credit-card"></i> Card</a>
             <a href="./team.html"><i class="fa-solid fa-users"></i> Team</a>
             <div id="premium">
 
@@ -144,18 +144,16 @@
                         <td>Cyber Security</td>
                         <td>A+</td>
                     </tr>
-                    <tr>
-                        <td>14</td>
-                        <td>DEEPAK KUMAR</td>
-                        <td>BIHAR</td>
-                        <td>FullStack Python</td>
-                        <td>D</td>
-                    </tr>
                 </table>
+                <div id="bottom">
+                    <button type="button" onclick="clear();">Prev</button>
+                    <button type="button" onclick="prt();">Print</button>
+                    <button type="button" onclick="next();">Next</button>
+                   </div>
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
