--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="card.css">
+  <link rel="stylesheet" href="./card.css">
 </head>
 
 <body>
   <div id="main">
     <div id="left">
       <p>ADMIN <br>SURAJ KUMAR</p>
-      <a href="./dash.html"><i class="fa-solid fa-list"></i> Dashboard</a>
-      <a href="./insert.html"><i class="fa-solid fa-table-list"></i> Insert</a>
-      <a href="./table.html"><i class="fa-solid fa-chart-line"></i> Table</a>
+      <a href="./HtmlFiles/dash.html"><i class="fa-solid fa-list"></i> Dashboard</a>
+      <a href="./HtmlFiles/insert.html"><i class="fa-solid fa-table-list"></i> Insert</a>
+      <a href="./HtmlFiles/table.html"><i class="fa-solid fa-chart-line"></i> Table</a>
       <a href="./index.html" id="card"><i class="fa-solid fa-credit-card"></i> Card</a>
-      <a href="./team.html"><i class="fa-solid fa-users"></i> Team</a>
+      <a href="./HtmlFiles/team.html"><i class="fa-solid fa-users"></i> Team</a>
       <div id="premium">
         <div id="box">
           <p>Get a Premium Account</p>
@@ -78,7 +78,14 @@
             </div>
           </div>
           <div id="box2">
-
+            <p id="date"></p>
+           <h2>Today's Screen Time</h2>
+           <div id="insta"><i class="fa-brands fa-square-instagram"></i> <meter min="0" value="40" max="100"></meter> <p>40%</p> </div>
+           <div id="whats"><i class="fa-brands fa-square-whatsapp"></i><meter min="0" value="10" max="100"></meter> <p>10%</p></div>
+           <div id="face"><i class="fa-brands fa-facebook"></i><meter min="0" value="15" max="100"></meter> <p>15%</p></div>
+           <div id="yout"><i class="fa-brands fa-youtube"></i><meter min="0" value="17" max="100"></meter> <p>17%</p></div>
+           <div id="google"><i class="fa-brands fa-google-plus"></i><meter min="0" value="18" max="100"></meter> <p>18%</p></div>
+           <div id="google"><i class="fa-solid fa-sliders"></i><meter min="0" value="18" max="100"></meter> <p>18%</p></div>
           </div>
         </div>
         <div id="main-box2">
