--- a/index.html
+++ b/index.html
@@ -79,13 +79,14 @@
           </div>
           <div id="box2">
             <p id="date"></p>
+            <p id="date">Used Apps</p>
            <h2>Today's Screen Time</h2>
-           <div id="insta"><i class="fa-brands fa-square-instagram"></i> <meter min="0" value="40" max="100"></meter> <p>40%</p> </div>
-           <div id="whats"><i class="fa-brands fa-square-whatsapp"></i><meter min="0" value="10" max="100"></meter> <p>10%</p></div>
-           <div id="face"><i class="fa-brands fa-facebook"></i><meter min="0" value="15" max="100"></meter> <p>15%</p></div>
-           <div id="yout"><i class="fa-brands fa-youtube"></i><meter min="0" value="17" max="100"></meter> <p>17%</p></div>
-           <div id="google"><i class="fa-brands fa-google-plus"></i><meter min="0" value="18" max="100"></meter> <p>18%</p></div>
-           <div id="google"><i class="fa-solid fa-sliders"></i><meter min="0" value="18" max="100"></meter> <p>18%</p></div>
+           <div id="insta"><i class="fa-brands fa-square-instagram"></i> <meter min="0" value="40" max="100"></meter> <p>40%  </p> </div>
+           <div id="whats"><i class="fa-brands fa-square-whatsapp"></i><meter min="0" value="10" max="100"></meter> <p>10%  </p></div>
+           <div id="face"><i class="fa-brands fa-facebook"></i><meter min="0" value="15" max="100"></meter> <p>15%  </p></div>
+           <div id="yout"><i class="fa-brands fa-youtube"></i><meter min="0" value="14" max="100"></meter> <p>14%  </p></div>
+           <div id="google"><i class="fa-brands fa-google-plus"></i><meter min="0" value="15" max="100"></meter> <p>15%  </p></div>
+           <div id="google"><i class="fa-solid fa-sliders"></i><meter min="0" value="6" max="100"></meter> <p>6% </p></div>
           </div>
         </div>
         <div id="main-box2">
