--- a/HtmlFiles/table.html
+++ b/HtmlFiles/table.html
@@ -18,7 +18,7 @@
             <a href="./dash.html"><i class="fa-solid fa-list"></i> Dashboard</a>
             <a href="./insert.html"><i class="fa-solid fa-table-list"></i> Insert</a>
             <a href="./table.html" id="table"><i class="fa-solid fa-chart-line"></i> Table</a>
-            <a href="insert.html"><i class="fa-solid fa-credit-card"></i> Card</a>
+            <a href="../index.html"><i class="fa-solid fa-credit-card"></i> Card</a>
             <a href="./team.html"><i class="fa-solid fa-users"></i> Team</a>
             <div id="premium">
 
