--- a/HtmlFiles/insert.html
+++ b/HtmlFiles/insert.html
@@ -45,8 +45,8 @@
                 </ul>
             </div>
             <div id="main-content">
-               <table width="90%">
-                <tr>
+               <table width="100%">
+                <tr id="head">
                     <th>S.no</th>
                     <th>Student Name</th>
                     <th>Address</th>
@@ -151,14 +151,44 @@
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                 </tr>
+                <tr>
+                    <td><input id="num" type="number"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                </tr>
+                <tr>
+                    <td><input id="num" type="number"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                </tr>
+                <tr>
+                    <td><input id="num" type="number"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                </tr>
+                <tr>
+                    <td><input id="num" type="number"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                </tr>
+
                </table>
-               <div id="bottom">
+
+            </div>
+            <div id="bottom">
                 <button type="button" onclick="clear();">Clear</button>
                 <button type="button" onclick="submit();">Submit</button>
                 <button type="button" onclick="prt();">Print</button>
                 <button type="button" onclick="next();">Next</button>
                </div>
-            </div>
         </div>
     </div>
     <script src="../script.js"></script>
