--- a/HtmlFiles/table.html
+++ b/HtmlFiles/table.html
@@ -45,112 +45,30 @@
                 </ul>
             </div>
             <div id="main-content">
-                <table width="90%">
-                    <tr>
-                        <th>S.no</th>
+                <table width="100%">
+                    <thead id="head">
+                        <th>Id</th>
                         <th>Name</th>
                         <th>Address</th>
                         <th>Course</th>
                         <th>Grade</th>
-                    </tr>
-                    <tr>
-                        <td>01</td>
-                        <td>SURAJ KUMAR</td>
-                        <td>BIHAR</td>
-                        <td>FullStack Java</td>
-                        <td>A+</td>
-                    </tr>
-                    <tr>
-                        <td>02</td>
-                        <td>AMAN KUMAR</td>
-                        <td>BHOPAL</td>
-                        <td>MERN STACK</td>
-                        <td>A</td>
-                    </tr>
-                    <tr>
-                        <td>03</td>
-                        <td>RAJAN KUMAR</td>
-                        <td>BIHAR</td>
-                        <td>FullStack Python</td>
-                        <td>A+</td>
-                    </tr>
-                    <tr>
-                        <td>04</td>
-                        <td>HARIOM KUMAR</td>
-                        <td>UJJAIN</td>
-                        <td>DATA SCIENCE</td>
-                        <td>B</td>
-                    </tr>
-                    <tr>
-                        <td>05</td>
-                        <td>SUSHIL KUMAR</td>
-                        <td>MANDIDEEP</td>
-                        <td>FullStack Java</td>
-                        <td>B+</td>
-                    </tr>
-                    <tr>
-                        <td>06</td>
-                        <td>RAHUL KUMAR</td>
-                        <td>BHOPAL</td>
-                        <td>FullStack Python</td>
-                        <td>A+</td>
-                    </tr>
-                    <tr>
-                        <td>07</td>
-                        <td>PANKAK KUMAR</td>
-                        <td>REVA</td>
-                        <td>FullStack Java</td>
-                        <td>C</td>
-                    </tr>
-                    <tr>
-                        <td>08</td>
-                        <td>DEVANSH KUMAR</td>
-                        <td>INDORE</td>
-                        <td>DIGITAL MARKETING</td>
-                        <td>A+</td>
-                    </tr>
-                    <tr>
-                        <td>09</td>
-                        <td>SHIVAM KUMAR</td>
-                        <td>JABALPUR</td>
-                        <td>DATA SCIENCE</td>
-                        <td>C+</td>
-                    </tr>
-                    <tr>
-                        <td>10</td>
-                        <td>KAMAL KUMAR</td>
-                        <td>BHOPAL</td>
-                        <td>MERN STACK</td>
-                        <td>A</td>
-                    </tr>
-                    <tr>
-                        <td>11</td>
-                        <td>BITTU KUMAR</td>
-                        <td>BIHAR</td>
-                        <td>DSA + C++</td>
-                        <td>B</td>
-                    </tr>
-                    <tr>
-                        <td>12</td>
-                        <td>VISHAL KUMAR</td>
-                        <td>ASHOKA GARDEN</td>
-                        <td>DSA + Python</td>
-                        <td>B+</td>
-                    </tr>
-                    <tr>
-                        <td>13</td>
-                        <td>SUMAN KUMAR</td>
-                        <td>REVA</td>
-                        <td>Cyber Security</td>
-                        <td>A+</td>
-                    </tr>
+                    </thead>
+                    <tbody id="display_data">
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tbody>
                 </table>
-                <div id="bottom">
-                    <button type="button" onclick="clear();">Prev</button>
-                    <button type="button" onclick="prt();">Print</button>
-                    <button type="button" onclick="next();">Next</button>
-                   </div>
+               
             </div>
+            <div id="bottom">
+                <button type="button" onclick="clear();">Prev</button>
+                <button type="button" onclick="prt();">Print</button>
+                <button type="button" onclick="fet();">Fetch</button>
+                <button type="button" onclick="next();">Next</button>
+               </div>
         </div>
     </div>
     <script src="../script.js"></script>
