--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
               <p id="transfer">+$30</p>
             </div>
           </div>
-          <div id="box">
-
+          <div id="box" id="box3">
+             <h3>Todays Activities</h3>
+             <img src="https://i.pinimg.com/originals/cc/fe/1f/ccfe1f7fee5fe18a65127d4ed1f4c036.gif" alt="">
           </div>
         </div>
       </div>
