--- a/HtmlFiles/dash.html
+++ b/HtmlFiles/dash.html
@@ -18,7 +18,7 @@
             <a href="./dash.html" id="dash"><i class="fa-solid fa-list"></i> Dashboard</a>
             <a href="./insert.html"><i class="fa-solid fa-table-list"></i> Insert</a>
             <a href="./table.html"><i class="fa-solid fa-chart-line"></i> Table</a>
-            <a href="../index.html" ><i class="fa-solid fa-credit-card"></i> Card</a>
+            <a href="../index.html"><i class="fa-solid fa-credit-card"></i> Card</a>
             <a href="./team.html"><i class="fa-solid fa-users"></i> Team</a>
             <div id="premium">
 
@@ -45,7 +45,78 @@
                 </ul>
             </div>
             <div id="main-content">
-               
+                <div id="box">
+                    <div><h4>CPU <i class="fa-solid fa-microchip"></i></h4></div>
+                    <img src="https://media.licdn.com/dms/image/D5612AQGcWElfObfH3Q/article-cover_image-shrink_600_2000/0/1702393073554?e=2147483647&v=beta&t=dHHZxwGaN2_wU_XeRy_A09wJtpPx5PM0rC5xsIp4fl8"
+                        alt="">
+                    <div>
+                        <p>CPU Utilization</p>
+                        <p>Speed</p>
+                    </div>
+                    <div>
+                        <h3>83%</h3>
+                        <h3>241GHz</h3>
+                    </div>
+                    <h5>Process</h5>
+                    <p>Explorer (1.35%)</p>
+                    <p>Home (3.54%)</p>
+                    <p>TextInputHost (0.00%)</p>
+                </div>
+                <div id="box">
+                    <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/23a54631460173.593e1b281d599.gif"
+                        alt="">
+                    <div>
+                        <p>CPU Utilization</p>
+                        <p>Speed</p>
+                    </div>
+                    <div>
+                        <h3>83%</h3>
+                        <h3>241GHz</h3>
+                    </div>
+                    <h5>Process</h5>
+                    <p>Explorer (1.35%)</p>
+                    <p>Home (3.54%)</p>
+                    <p>TextInputHost (0.00%)</p>
+                </div>
+                <div id="box">
+
+                </div>
+                <div id="box">
+
+                </div>
+                <div id="box">
+                    <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/23a54631460173.593e1b281d599.gif"
+                        alt="">
+                    <div>
+                        <p>CPU Utilization</p>
+                        <p>Speed</p>
+                    </div>
+                    <div>
+                        <h3>83%</h3>
+                        <h3>241GHz</h3>
+                    </div>
+                    <h5>Process</h5>
+                    <p>Explorer (1.35%)</p>
+                    <p>Home (3.54%)</p>
+                    <p>TextInputHost (0.00%)</p>
+                </div>
+                <div id="box">
+                    <img src="https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto,q_auto,f_auto/v1/attachments/delivery/asset/001df25cf51a2692438bd0918ae6b012-1678301044/Gif%20animation/do-animated-gif-or-splash-screen-for-web-and-mobile-app.gif"
+                        alt="">
+                    <div>
+                        <p>CPU Utilization</p>
+                        <p>Speed</p>
+                    </div>
+                    <div>
+                        <h3>83%</h3>
+                        <h3>241GHz</h3>
+                    </div>
+                    <h5>Process</h5>
+                    <p>Explorer (1.35%)</p>
+                    <p>Home (3.54%)</p>
+                    <p>TextInputHost (0.00%)</p>
+                </div>
+
             </div>
         </div>
     </div>
