--- a/HtmlFiles/dash.html
+++ b/HtmlFiles/dash.html
@@ -36,7 +36,7 @@
                 </ul>
                 <ul id="second">
                     <li><a href="#"><i class="fa-solid fa-bell"></i></a></li>
-                    <li id="user"><a href="./Form/form.html" target="_blank"><i class="fa-solid fa-user"></i></a></li>
+                    <li id="user"><a href="../Form/form.html" target="_blank"><i class="fa-solid fa-user"></i></a></li>
                     <li id="mode" onclick="mode();"><a href="#"><i class="fa-solid fa-circle-half-stroke"></i></a></li>
                 </ul>
                 <ul id="third">
@@ -46,21 +46,78 @@
             </div>
             <div id="main-content">
                 <div id="box">
-                    <div><h4>CPU <i class="fa-solid fa-microchip"></i></h4></div>
+                    <div>
+                        <h4>CPU <i class="fa-solid fa-microchip"></i> PROCESSING ...</h4>
+                    </div>
                     <img src="https://media.licdn.com/dms/image/D5612AQGcWElfObfH3Q/article-cover_image-shrink_600_2000/0/1702393073554?e=2147483647&v=beta&t=dHHZxwGaN2_wU_XeRy_A09wJtpPx5PM0rC5xsIp4fl8"
                         alt="">
                     <div>
-                        <p>CPU Utilization</p>
-                        <p>Speed</p>
+                        <h5>CPU Utilization</h5>
+                        <hr width="200px" color="#24315E">
+                        <h5>Speed</h5>
                     </div>
                     <div>
-                        <h3>83%</h3>
-                        <h3>241GHz</h3>
+                        <h3 id="perc"></h3>
+                        <h3 id="ghz">241GHz</h3>
                     </div>
                     <h5>Process</h5>
-                    <p>Explorer (1.35%)</p>
-                    <p>Home (3.54%)</p>
-                    <p>TextInputHost (0.00%)</p>
+                    <h5>Explorer (1.35%)</h5>
+                    <h5>Home (3.54%)</h5>
+                    <h5>TextInputHost (0.00%)</h5>
+                </div>
+                <div id="box">
+                    <h4>Insert Data in Table</h4>
+                    <img src="https://static.wixstatic.com/media/17ac83_810739dfef3941449effd1751ba1c080~mv2.gif"
+                        alt="">
+                    <div>
+                        <h5>S.Id</h5>
+                        <hr width="200px" color="#24315E">
+                        <h5>Unknown</h5>
+                    </div>
+                    <div>
+                        <h5>Student Name</h5>
+                        <h5>Unknown</h5>
+                    </div>
+                    <div>
+                        <h5>Address</h5>
+                        <h5>Unknown</h5>
+                    </div>
+                    <div>
+                        <h5>Course</h5>
+                        <h5>Unknown</h5>
+                    </div>
+                    <div>
+                        <h5>Grade</h5>
+                        <h5>Unknown</h5>
+                    </div>
+                    <a href="./insert.html"><button type="button">Insert</button></a>
+                </div>
+                <div id="box">
+                    <h4>Fetch Data in Table</h4>
+                    <img src="https://www.shriramgi.com/bundle/assets/images/product/pa-renewal/gif/Data-Fetch.gif"
+                        alt="">
+                    <div>
+                        <h5>S.Id</h5>
+                        <hr width="200px" color="#24315E">
+                        <h5>Cybrom-1032</h5>
+                    </div>
+                    <div>
+                        <h5>Student Name</h5>
+                        <h5>SURAJ KUMAR</h5>
+                    </div>
+                    <div>
+                        <h5>Address</h5>
+                        <h5>BHOPAL (MP)</h5>
+                    </div>
+                    <div>
+                        <h5>Course</h5>
+                        <h5>JAVA FULLSTACK</h5>
+                    </div>
+                    <div>
+                        <h5>Grade</h5>
+                        <h5>A+</h5>
+                    </div>
+                    <a href="./table.html"><button type="button">Fetch</button></a>
                 </div>
                 <div id="box">
                     <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/23a54631460173.593e1b281d599.gif"
@@ -78,45 +135,6 @@
                     <p>Home (3.54%)</p>
                     <p>TextInputHost (0.00%)</p>
                 </div>
-                <div id="box">
-
-                </div>
-                <div id="box">
-
-                </div>
-                <div id="box">
-                    <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/23a54631460173.593e1b281d599.gif"
-                        alt="">
-                    <div>
-                        <p>CPU Utilization</p>
-                        <p>Speed</p>
-                    </div>
-                    <div>
-                        <h3>83%</h3>
-                        <h3>241GHz</h3>
-                    </div>
-                    <h5>Process</h5>
-                    <p>Explorer (1.35%)</p>
-                    <p>Home (3.54%)</p>
-                    <p>TextInputHost (0.00%)</p>
-                </div>
-                <div id="box">
-                    <img src="https://fiverr-res.cloudinary.com/images/t_main1,q_auto,f_auto,q_auto,f_auto/v1/attachments/delivery/asset/001df25cf51a2692438bd0918ae6b012-1678301044/Gif%20animation/do-animated-gif-or-splash-screen-for-web-and-mobile-app.gif"
-                        alt="">
-                    <div>
-                        <p>CPU Utilization</p>
-                        <p>Speed</p>
-                    </div>
-                    <div>
-                        <h3>83%</h3>
-                        <h3>241GHz</h3>
-                    </div>
-                    <h5>Process</h5>
-                    <p>Explorer (1.35%)</p>
-                    <p>Home (3.54%)</p>
-                    <p>TextInputHost (0.00%)</p>
-                </div>
-
             </div>
         </div>
     </div>
