--- a/HtmlFiles/insert.html
+++ b/HtmlFiles/insert.html
@@ -184,7 +184,7 @@
 
             </div>
             <div id="bottom">
-                <button type="button" onclick="clear();">Clear</button>
+                <button type="button" onclick="clear();"><a href="./insert.html">Clear</a></button>
                 <button type="button" onclick="submit();">Submit</button>
                 <button type="button" onclick="prt();">Print</button>
                 <button type="button" onclick="next();">Next</button>
