--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <div id="box1">
                 <h2>Reach financial goal faster</h2>
                 <p>Use your payment card around the world with no hidden fees Hold transfer and spend money</p>
-                <button type="button">Learn More</button>
+                <button type="button" onclick="learMore();">Learn More</button>
               </div>
               <div id="box2">
                 <img src="https://static.qantasloyalty.com/store-static-assets/desktop/1005254_1.jpg" alt="">
@@ -127,8 +127,8 @@
             </div>
           </div>
           <div id="box" id="box3">
-             <h3>Todays Activities</h3>
-             <img src="https://i.pinimg.com/originals/cc/fe/1f/ccfe1f7fee5fe18a65127d4ed1f4c036.gif" alt="">
+             <h3><a href="https://maps.app.goo.gl/qqHy82outPa3fn9Q8" target="_blank">Locate Me on Map <i class="fa-solid fa-up-right-from-square"></i></a> </h3>
+             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13375517.340303045!2d79.10800190428546!3d23.26462627220384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1713947999729!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
       </div>
