--- a/HtmlFiles/dash.html
+++ b/HtmlFiles/dash.html
@@ -63,7 +63,9 @@
                     <h5>Process</h5>
                     <h5>Explorer (1.35%)</h5>
                     <h5>Home (3.54%)</h5>
-                    <h5>TextInputHost (0.00%)</h5>
+                    <div><h5>TextInputHost (0.00%)</h5> 
+                    <a href="../HtmlFiles/dash.html" id="refresh"><i class="fa-solid fa-rotate-right"></i></a>
+                    </div>
                 </div>
                 <div id="box">
                     <h4>Insert Data in Table</h4>
@@ -120,25 +122,36 @@
                     <a href="./table.html"><button type="button">Fetch</button></a>
                 </div>
                 <div id="box">
-                    <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/23a54631460173.593e1b281d599.gif"
+                    <h4>Team Work</h4>
+                    <img src="https://res.infoq.com/articles/who-is-on-the-team/en/headerimage/who-is-on-the-team-header-1612952290708.jpg"
                         alt="">
+                        
                     <div>
-                        <p>CPU Utilization</p>
-                        <p>Speed</p>
+                        <h5>Team Leader</h5>
+                        <hr width="150px" color="#24315E">
+                        <h5>MD QUASIM</h5>
                     </div>
                     <div>
-                        <h3>83%</h3>
-                        <h3>241GHz</h3>
+                        <h5>Team Management</h5>
+                        <h5>SURAJ KUMAR</h5>
                     </div>
-                    <h5>Process</h5>
-                    <p>Explorer (1.35%)</p>
-                    <p>Home (3.54%)</p>
-                    <p>TextInputHost (0.00%)</p>
+                    <div>
+                        <h5>Frontend Developer</h5>
+                        <h5>RAJAN KUMAR</h5>
+                    </div>
+                    <div>
+                        <h5>Backend Developer</h5>
+                        <h5>DEVANSH GARG</h5>
+                    </div>
+                    <div>
+                        <h5>Tester</h5>
+                        <h5>SUSHIL LOVANSHI</h5>
+                    </div>
+                    <a href="../HtmlFiles/team.html"><button type="button">Team</button></a>
                 </div>
             </div>
         </div>
-    </div>
-    <script src="../script.js"></script>
+        <script src="../script.js"></script>
 </body>
 
 </html>
