--- a/HtmlFiles/insert.html
+++ b/HtmlFiles/insert.html
@@ -46,139 +46,181 @@
             </div>
             <div id="main-content">
                <table width="100%">
-                <tr id="head">
+                <thead id="head">
                     <th>S.no</th>
                     <th>Student Name</th>
                     <th>Address</th>
                     <th>Course</th>
                     <th>Grade</th>
-                </tr>
-                <tr>
+                </thead>
+                <tbody>
                     <td><input id="num" type="number" placeholder="Enter S.no"></td>
                     <td><input type="text" placeholder="Enter name"></td>
                     <td><input type="text" placeholder="Address"></td>
                     <td><input type="text" placeholder="Course"></td>
                     <td><input type="text" placeholder="Grade"></td>
-                </tr>
-                <tr>
+                </tbody>
+                <tbody>
                     <td><input id="num" type="number"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                </tr>
-                <tr>
+                </tbody>
+                <tbody>
                     <td><input id="num" type="number"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                </tr>
-                <tr>
+                </tbody>
+                <tbody>
                     <td><input id="num" type="number"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                </tr>
-                <tr>
+                </tbody>
+                <tbody>
                     <td><input id="num" type="number"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                </tr>
-                <tr>
+                </tbody>
+                <tbody>
                     <td><input id="num" type="number"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                </tr>
-                <tr>
+                </tbody>
+                <tbody>
                     <td><input id="num" type="number"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                </tr>
-                <tr>
+                </tbody>
+                <tbody>
                     <td><input id="num" type="number"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                </tr>
-                <tr>
+                </tbody>
+                <tbody>
                     <td><input id="num" type="number"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                </tr>
-                <tr>
+                </tbody>
+                <tbody>
                     <td><input id="num" type="number"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                </tr>
-                <tr>
+                </tbody>
+                <tbody>
                     <td><input id="num" type="number"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                </tr>
-                <tr>
+                </tbody>
+                <tbody>
                     <td><input id="num" type="number"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                </tr>
-                <tr>
+                </tbody>
+                <tbody>
                     <td><input id="num" type="number"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                </tr>
-                <tr>
+                </tbody>
+                <tbody>
                     <td><input id="num" type="number"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                </tr>
-                <tr>
+                </tbody>
+                <tbody>
                     <td><input id="num" type="number"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                </tr>
-                <tr>
+                </tbody>
+                <tbody>
                     <td><input id="num" type="number"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                </tr>
-                <tr>
+                </tbody>
+                <tbody>
                     <td><input id="num" type="number"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                </tr>
-                <tr>
+                </tbody>
+                <tbody>
                     <td><input id="num" type="number"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
                     <td><input type="text"></td>
-                </tr>
+                </tbody>
+                <tbody>
+                    <td><input id="num" type="number"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                </tbody>
+                <tbody>
+                    <td><input id="num" type="number"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                </tbody>
+                <tbody>
+                    <td><input id="num" type="number"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                </tbody>
+                <tbody>
+                    <td><input id="num" type="number"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                </tbody>
+                <tbody>
+                    <td><input id="num" type="number"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                </tbody>
+                <tbody>
+                    <td><input id="num" type="number"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                    <td><input type="text"></td>
+                </tbody>
 
                </table>
 
